GUI Version added. Made few changes

--- a/console.html
+++ b/console.html
@@ -2,6 +2,7 @@
 
 <head>
     <title> Rock Paper Scissor | The Odin Project</title>
+    <meta name="author" content="Vikram Sehgal"></head>
 </head>
 
 <body>
